# Kataribe

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_jp.md  data_contract.yaml  failures.md
.github/workflows/: build.yml  knock-image.yml
app/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/src/: App.vue  i18n.ts  main.ts  messages.ts  rtc.ts  table.ts  theme.ts  transport.ts  tts.ts  vite-env.d.ts  voice.ts
app/src-tauri/: Cargo.toml  Info.plist  failures.md  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs  relay.rs  site.rs  update.rs
app/src/assets/: main.css
app/src/components/: ActionInput.vue  ConfirmDialog.vue  ContestPanel.vue  ConversationLog.vue  DecisionPanel.vue  DiceReveal.vue  FactsPanel.vue  Icon.vue  MapPanel.vue  MemoPanel.vue  MicFab.vue  PackageDialog.vue  SaveSlotDialog.vue  SettingsDialog.vue  StatePanel.vue  TableBar.vue  TableDialog.vue  TitleBar.vue  TtsControls.vue
app/src/stores/: game.ts
app/src/types/: api.ts
crates/gm_core/: Cargo.toml
crates/gm_core/fixtures/: gift.yaml  heroine_route.yaml  skill_awakening.yaml  trigger_recall.yaml
crates/gm_core/src/: engine.rs  expr.rs  lib.rs  lint.rs  reason.rs  spine.rs  state.rs
crates/harness/: Cargo.toml
crates/harness/fixtures/: campaign_global.yaml  campaign_revisit.yaml  forest.yaml  heroine_meet.yaml  locked_room.yaml  stage_a.yaml  stage_b.yaml  village.yaml
crates/harness/fixtures/characters/: alice.yaml
crates/harness/fixtures/memoria/: childhood_promise.yaml
crates/harness/src/: asset.rs  campaign.rs  epilogue.rs  error.rs  facts.rs  lib.rs  loader.rs  main.rs  memo.rs  memoria.rs  package.rs  prompt.rs  proposer.rs  save.rs  synopsis.rs  turn.rs
crates/harness/tests/: bundled_packages.rs  data_contract_parses.rs
crates/llm_client/: Cargo.toml
crates/llm_client/src/: anthropic.rs  canonical.rs  client.rs  config.rs  error.rs  gemini.rs  lib.rs  openai_compat.rs  parse.rs  wire.rs
docs/: qiita_llm-gm_seihon-engine.md  qiita_llm-gm_vampire-werewolf.md  qiita_openai_wire_unified_tool_layer.md
knock/: Cargo.toml  Dockerfile
knock/src/: main.rs  msg.rs  ratelimit.rs  registry.rs  turncred.rs
scenarios/: classroom.yaml  fumble_check.yaml  gift.yaml  heroine_meet.yaml  heroine_route.yaml  skill_awakening.yaml  strength_trial.yaml  trigger_recall.yaml
specs/: 01_immersion_assets.md  02_flag_persistence.md  03_flag_hints.md  04_presence_control.md  05_distribution_site.md  06_hidden_roles.md  07_save_load.md  08_chronicle_retrieval.md  09_sequential_adjudication.md  10_synopsis.md  11_epilogue.md  12_unified_tool_layer.md  13_gemini_explicit_cache.md  14_input_cache_maximization.md  15_map_panel.md  16_percentile_checks.md  17_package_updates.md  18_player_dice.md  19_stat_expressions.md  20_shared_facts.md  20_shared_memo.md  21_certain_actions.md  23_multiplayer.md
