[workspace]
resolver = "2"
members = ["crates/gm_core"]
# 次フェーズで追加予定:
#   crates/llm_client   — LocalAI llm_client.py を Rust移植 (クラウドLLM/structured output)
#   crates/harness      — CLI playthrough + 敵対テスト

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
