[workspace]
resolver = "2"
members = ["crates/gm_core", "crates/llm_client", "crates/harness"]

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
# authored 宣言 (initial_stats / CharacterDef.stats 等) の YAML 記述順を保持するための
# 順序保存マップ (表示順を「書いた順」にする、spec: stat/attr display order)。
indexmap = { version = "2", features = ["serde"] }
# llm_client 用 (クラウド LLM ナレーター脚)
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
schemars = "0.8"
thiserror = "2"
dotenvy = "0.15"
# 自前 crate
gm_core = { path = "crates/gm_core" }
