[package]
name = "gm_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "TRPG-GM の正本 (state machine)。三権分立の「エンジン=裁定」脚。"

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
indexmap.workspace = true
schemars = { workspace = true, optional = true }

[features]
# LLM の structured output 用に StateDelta/StateOp の JSON Schema を機械生成する。
# 既定 off (正本エンジンは LLM 非依存)。llm_client が有効化する。
schema = ["dep:schemars"]
