[package]
name = "harness"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "GM ターンループ。LLM 提案 → 正本裁定 → 却下なら理由を戻して再生成 (LocalAI _self_repair_loop 同型)。"

[dependencies]
gm_core.workspace = true
llm_client = { path = "../llm_client" }
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
dotenvy.workspace = true

# 実クラウド通しプレイ用の bin (ネットワーク必須、テスト対象外)。
[[bin]]
name = "play"
path = "src/main.rs"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
